--- a/CSS/HTML引入CSS的方法4.html
+++ b/CSS/HTML引入CSS的方法4.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>导入式</title>
-		<!-- 导入样式 -->
+		<!-- 导入样式，全部塞进来，会影响性能 -->
 		<style type="text/css">
 			@import url(yellow.css)
 
