--- a/HTML表格/sec02.html
+++ b/HTML表格/sec02.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>用columns左右合并</title>
+	<title>用colspan左右合并</title>
 </head>
 <body>
 	<!-- 没有border的时候，没有线 -->
